# Testes-algoritmos

./: .gitignore  pyproject.toml
Algoritmos C/: .clang-format
Algoritmos C/MLP/: Makefile  README.md  ativacoes.c  ativacoes.h  cria_main.py  mlp.c  neuronio.c  neuronio.h  structs.c  structs.h
Algoritmos C/k-NN/: Makefile  README.md  cria_main.py  gera_dataset.py  knn.c  main.c  structs.c  structs.h  tabela.c  tabela.h  utils.c  utils.h
Algoritmos python/: README.md  download.py  k-nn.py  mlp-treino.py  mlp.py
