[tool.poetry]
name = "fpg-i-a"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fpg_i_a"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
requests = "^2.28.2"
scikit-learn = "^1.2.1"
pandas = "^1.5.3"
torch = "^1.13.1"

[tool.poetry.dev-dependencies]
blue = "^0.9.1"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
